# tracehouse

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy-landing.yml
apps/api/: pyproject.toml
apps/api/absolutely_api/: __init__.py  app.py  cli.py  db.py  embeddings.py  mcp_server.py  models.py  privacy.py  query.py  redaction.py  schema.py
apps/api/tests/: test_app.py  test_db.py  test_mcp.py  test_redaction.py  test_schema.py
apps/web/: package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/agents/: page.tsx
apps/web/app/analytics/: page.tsx
apps/web/app/commits/[commitHash]/: page.tsx
apps/web/app/daily-reports/: page.tsx
apps/web/app/repositories/: page.tsx
apps/web/app/search/: page.tsx
apps/web/app/sessions/: page.tsx
apps/web/app/sessions/[sessionKey]/: page.tsx
apps/web/app/settings/: page.tsx
apps/web/app/timeline/: page.tsx
apps/web/components/: command-transcript.tsx  dashboard-shell.tsx  privacy-controls.tsx  session-row.tsx
apps/web/lib/: api.ts  format.ts
crates/collector/: Cargo.toml
crates/collector/src/: cli.rs  collector.rs  config.rs  detect.rs  event.rs  git.rs  hook.rs  install.rs  lib.rs  main.rs  state.rs  transcript.rs
crates/collector/tests/: collector.rs
docs/: agent-setup.md
site/: index.html  styles.css
