[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "absolutely-api"
version = "0.1.0"
description = "Foundation API for Tracehouse, a local-first terminal intelligence platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "cryptography>=42,<47",
  "fastmcp>=2.12,<3",
  "uvicorn>=0.30,<1",
]

[project.scripts]
tracehouse-api = "absolutely_api.cli:main"
tracehouse-mcp = "absolutely_api.mcp_server:main"
absolutely-api = "absolutely_api.cli:main"
absolutely-mcp = "absolutely_api.mcp_server:main"

[tool.setuptools]
[tool.setuptools.packages.find]
where = ["."]
include = ["absolutely_api*"]
